<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="advanced_settings">ZenParts</string>
    <string name="advanced_settings_summary">Device Specific Customizations</string>
    <string name="display_title">Display</string>
    <string name="backlight_dimmer">Backlight Dimmer</string>
    <string name="backlight_summary">Dim the display to the maximum value</string>
    <string name="torch_title">Torch</string>
    <string name="torch_brightness_title">Brightness</string>
    <string name="vibration_title">Vibration</string>
    <string name="vibration_strength_title">Vibration Strength</string>
    <string name="audio_title">Audio Modification</string>
    <string name="audio_category">Audio</string>
    <string name="headphone_gain">Headphone gain</string>
    <string name="microphone_gain">Microphone gain</string>
    <string name="smart_charging_main_title">Battery</string>
    <string name="smart_charging_title">Smart charging</string>
    <string name="smart_charging_summary">Protect device battery from over charging</string>
    <string name="smart_charging_limit">Select charging limit</string>
    <string name="reset_stats_title">Reset battery stats</string>
    <string name="reset_stats_summary">Battery stats will get reset when charging limit is reached</string>
    <string name="spectrum_profile_title">Spectrum</string>
    <string name="spectrum_title">Spectrum Profiles</string>
    <string name="spectrum_summary">Choose your Spectrum Profiles</string>
    <string name="spectrum_dialogTitle">Choose your Spectrum Profiles</string>
    <string name="spectrum_balance">Balance</string>
    <string name="spectrum_performance">Performance</string>
    <string name="spectrum_battery">Battery</string>
    <string name="spectrum_gaming">Gaming</string>
    <string name="device_kcal_title">Display Color Calibration</string>
    <string name="advanced_settings_kcal">Display Color Calibration</string>
    <string name="cat_colormanagement">Color Settings</string>
    <string name="cat_calibration">Display Calibration</string>
    <string name="kcal_summary">Display color calibration using KCAL</string>
    <string name="kcal_enabled">On</string>
    <string name="kcal_disabled">Off</string>
    <string name="set_on_boot">Set On Boot</string>
    <string name="color_red">Red</string>
    <string name="color_green">Green</string>
    <string name="color_blue">Blue</string>
    <string name="color_minimum">Minimum</string>
    <string name="saturation">Saturation</string>
    <string name="value">Value</string>
    <string name="contrast">Contrast</string>
    <string name="hue">Hue</string>
    <string name="grayscale">Grayscale Display</string>
    <string name="presets_dialog_title">Select Preset</string>
    <string name="preset_default">Default</string>
    <string name="preset_version_1">Version 1</string>
    <string name="preset_version_2">Version 2</string>
    <string name="preset_version_3">Version 3</string>
    <string name="preset_triluminous">Triluminous</string>
    <string name="preset_deep_black_white">Deep Black and White</string>
    <string name="preset_deep_natural">Deep Natural</string>
    <string name="preset_cool_amoled">Cool Amoled</string>
    <string name="preset_extreme_amoled">Extreme Amoled</string>
    <string name="preset_warm_amoled">Warm Amoled</string>
    <string name="preset_hybrid_mamba">Hybrid Mamba</string>
    <string name="preset_sir_banger">Sir Banger</string>
    <string name="preset_gerard_extrem_cool">Gerard Extreme Cool</string>
    <string name="preset_yoyoz808">Yoyoz808</string>
    <string name="preset_purian">Purian</string>
    <string name="preset_deep_black_colorful">Deep Black Colorful</string>
    <string name="preset_vomer_deep_rich">Vomer Deep Rich</string>
    <string name="preset_franco">Franco</string>
    <string name="preset_wrinklefree_cool">WrinkleFree Cool</string>
    <string name="preset_harley_tech">Harley-Tech</string>
    <string name="preset_perfection">Perfection</string>
    <string name="preset_banged_up">Banged up</string>
    <string name="preset_sim_cooler">SimCooler</string>
    <string name="preset_obsanity">Obsanity</string>
    <string name="preset_obsanity_ips">Obsanity IPS</string>
    <string name="kcal_presets" translatable="false">@string/presets_dialog_title</string>
    <string name="kcal_reset">Reset</string>
    <string name="custom_seekbar_value">Value: <xliff:g id="v">%s</xliff:g></string>
    <string name="custom_seekbar_default_value">Default</string>
    <string name="custom_seekbar_default_value_to_set">Default value: <xliff:g id="v">%s</xliff:g>\nLong press to set</string>
    <string name="custom_seekbar_default_value_is_set">Default value is set</string>
    <string name="thermal_title">Thermal</string>
    <string name="msmthermal_title">MSM Thermal</string>
    <string name="msmthermal_summary">Enable Thermal driver control</string>
    <string name="corecontrol_title">Core Control</string>
    <string name="corecontrol_summary">Limit the cores</string>
    <string name="vddrestrict_title">VDD Restriction</string>
    <string name="vddrestrict_summary">Limits CPU voltage</string>
    <string name="cpucore_title">CPU Core</string>
    <string name="cpucore_summary">Control Your CPU core</string>
    <string name="cpucore_dialogTitle">Select no. of core want to disable</string>
    <string name="cpucore_zero">0</string>
    <string name="cpucore_one">1</string>
    <string name="cpucore_two">2</string>
    <string name="cpucore_three">3</string>
    <string name="cpucore_four">4</string>
    <string name="cpucore_five">5</string>
    <string name="cpucore_six">6</string>
    <string name="cpucore_seven">7</string>
    <string name="ambient_gesture_haptic_feedback">Haptic feedback</string>
    <string name="ambient_gesture_haptic_feedback_summary">Vibrate when a Ambient gesture is detected</string>
    <string name="category_gesture">Gestures</string>
    <string name="ambient_display_enable_title">Ambient display gestures</string>
    <string name="ambient_display_enable_summary">Wake screen when you receive notifications</string>
    <string name="ambient_display_gestures_title">Ambient display gestures</string>
    <string name="ambient_display_gestures_summary">Additional gestures to wake the screen</string>
    <string name="ambient_display_summary">Wake screen when you receive notifications</string>
    <string name="ambient_display_summary_on">Screen will wake when you receive notifications</string>
    <string name="ambient_display_summary_off">Screen will not wake when you receive notifications</string>
    <string name="tilt_sensor_title">Tilt sensor</string>
    <string name="pickup_sensor_title">Pickup sensor</string>
    <string name="proximity_sensor_title">Proximity sensor</string>
    <string name="hand_wave_gesture_title">Hand wave</string>
    <string name="hand_wave_gesture_summary">Pulse notifications on hand wave</string>
    <string name="hand_wave_gesture_flat_title">Detect orientation</string>
    <string name="hand_wave_gesture_flat_summary">Pulse only if the phone is lying face up on a flat surface</string>
    <string name="pick_up_gesture_title">Pick-up</string>
    <string name="pick_up_gesture_summary">Pulse notifications on pick-up</string>
    <string name="pocket_gesture_title">Pocket</string>
    <string name="pocket_gesture_summary">Pulse notifications on removal from pocket</string>
    <string name="proximity_wake_title">Proximity wake</string>
    <string name="proximity_wake_enable_title">Proximity wake</string>
    <string name="proximity_wake_enable_summary">Wake device on hand wave</string>
    <string name="tcpcongestion_title">TCP Congestion</string>
    <string name="tcpcongestion_summary">Transmission Control Protocol Congestion Algorithm</string>
    <string name="tcpcongestion_dialogTitle">Choose your TCP Congestion Algorithm</string>
    <string name="misc_title">Miscellaneous</string>
    <string name="tcpcongestion_cubic">cubic</string>
    <string name="tcpcongestion_westwood">westwood</string>
    <string name="tcpcongestion_veno">veno</string>
    <string name="tcpcongestion_bic">bic</string>
    <string name="tcpcongestion_illinois">illinois</string>
    <string name="tcpcongestion_htcp">htcp</string>
    <string name="tcpcongestion_bbr">bbr</string>
    <string name="fps_info_title">FPS Info Overlay</string>
    <string name="fps_info_summary">Show current frames per second by overlay</string>
    <string name="switch_bar_on">On</string>
    <string name="switch_bar_off">Off</string>
    <string name="device_settings_app_name">Advanced settings</string>
    <string name="dirac_title">Dirac Sound Enhancer</string>
    <string name="dirac_summary">Optimize audio quality</string>
    <string name="dirac_headset_title">Choose headphones type</string>
    <string name="dirac_preset_title">Choose a preset</string>
    <string name="dirac_qs_tile_title">Dirac Sounds</string>
    <string name="dirac_headset_default">Default</string>
    <string name="dirac_headset_earbuds">Mi Earbuds</string>
    <string name="dirac_headset_in_ear_2013">Mi In-Ear (2013)</string>
    <string name="dirac_headset_piston_1">Mi Piston-1</string>
    <string name="dirac_headset_general">General</string>
    <string name="dirac_headset_general_inear">General In-Ear</string>
    <string name="dirac_headset_piston_basic">Basic Edition</string>
    <string name="dirac_headset_piston_2">Mi Piston-2</string>
    <string name="dirac_headset_piston_standard">Standard Edition</string>
    <string name="dirac_headset_headphone">Mi Headphones</string>
    <string name="dirac_headset_piston_youth">Youth Edition</string>
    <string name="dirac_headset_piston_color">Color Edition</string>
    <string name="dirac_headset_in_ear">Mi In-Ear</string>
    <string name="dirac_headset_capsule">Mi Capsule</string>
    <string name="dirac_headset_in_ear_pro">Mi In-Ear Pro</string>
    <string name="dirac_headset_comfort">Mi Comfort</string>
    <string name="dirac_headset_reduction_noise">Mi Noise Cancelling Type-C</string>
    <string name="dirac_headset_cancelling">Mi Noise Cancelling 3.5mm</string>
    <string name="dirac_headset_half_in_ear">Mi Half In-Ear</string>
    <string name="dirac_headset_in_ear2">Mi In-Ear 2</string>
    <string name="dirac_headset_earphone_basic">Mi Earphones Basic</string>
    <string name="dirac_headset_earphone">Mi Earphones</string>
    <string name="dirac_preset_default">Default</string>
    <string name="dirac_preset_bass_booster">Bass Booster</string>
    <string name="dirac_preset_rock">Rock</string>
    <string name="dirac_preset_jazz">Jazz</string>
    <string name="dirac_preset_pop">Pop</string>
    <string name="dirac_preset_classical">Classical</string>
    <string name="dirac_preset_hiphop">Hip Hop</string>
    <string name="dirac_preset_blues">Blues</string>
    <string name="dirac_preset_electronic">Electronic</string>
    <string name="dirac_preset_country">Country</string>
    <string name="dirac_preset_dance">Dance</string>
    <string name="dirac_preset_metal">Metal</string>
    <string name="dirac_preset_live">Live</string>
    <string name="dirac_preset_balanced">Balanced</string>
    <string name="dirac_preset_bass_reduction">Bass Reduction</string>
    <string name="dirac_preset_treble_reduction">Treble Reduction</string>
    <string name="dirac_preset_soft_bass">Soft Bass</string>
    <string name="dirac_preset_soft_treble">Soft Treble</string>
</resources>